@@ -1,11 +1,11 @@
 <tal:defines i18n:domain="PloneMeeting"
              define="item_url context/absolute_url;
-                     advicesByType context/getAdvicesByType;
-                     advisableGroups context/getAdvicesGroupsInfosForUser;
+                     advicesByType view/advicesByType;
+                     advisableGroups view/advisableGroups;
                      advicesToAdd python: [info[0] for info in advisableGroups[0]];
                      advicesToEdit python: [info[0] for info in advisableGroups[1]];
                      userAdviserGroupIds python: [group.getId() for group in view.tool.getGroupsForUser(suffixes=['advisers'])];
-                     advicesToWarn python: view.advicesDelayToWarn(advicesByType, userAdviserGroupIds);">
+                     advicesToWarn python: view.advicesDelayToWarn(userAdviserGroupIds);">
   <div class="contentActionsAX" cellpadding="0" cellspacing="0">
       <tal:advicesToAddOrExisting condition="python: advicesByType or advicesToAdd">
       <tal:definesIfSomethingToShow define="cfg python: view.cfg;
@@ -216,10 +216,15 @@
                       </a>
                     </td>
                     <td align="right" width="20px" class="noPadding">
-                        <img i18n:attributes="title" title="Delete"
+                        <img tal:condition="python: view.mayDelete(obj)"
+                             i18n:attributes="title" title="Delete advice"
                              tal:attributes="src string: ${view/portal_url}/delete_icon.png;
                                              onClick string:javascript:confirmDeleteObject(base_url='${context/absolute_url}', object_uid='${advice/advice_uid}', this);;"
                              onClick="javascript:confirmDeleteObject(this)" style="cursor:pointer"/>
+                        <img tal:condition="python: not view.mayDelete(obj)"
+                             i18n:attributes="title" title="Advice not deletable"
+                             tal:attributes="src string: ${view/portal_url}/delete_grey_icon.png;"
+                             style="cursor:help"/>
                     </td>
                   </tr>
                   <tr tal:condition="python: adviceType != 'not_given'">
